Add averages endpoint
