# metric-crud-app-backend/src/routes/MetricRouter.ts
@@ -9,6 +9,7 @@ const { validate } = new Validator({});
 
 metricRouter.post('/', validate({ body: metricSchema }), async (req: Request, res: Response) => await new MetricController().create(req, res));
 metricRouter.get('/', async (req: Request, res: Response) => await new MetricController().getAll(req, res));
+metricRouter.get('/averages', async (req: Request, res: Response) => await new MetricController().getAverages(req, res));
 metricRouter.get('/:id', async (req: Request, res: Response) => await new MetricController().get(req, res));
 
 export default metricRouter;
